# neurofhe-relay

./: .gitattributes  .gitignore  01-one-pager.md  02-pitch-deck.md  03-technical-architecture.md  04-demo-roadmap.md  05-risk-register.md  06-evidence-and-sources.md  07-post-quantum-cryptography-track.md  08-encrypted-thoughts-whitepaper.md  09-relay-gateway-pattern.md  10-native-performance-track.md  11-architecture-visuals.md  12-discreet-spike-sorting-proof.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  MAINTAINERS.md  PACKAGE_MANIFEST.md  PUBLIC_DOMAIN_NOTICE.md  README.md  RELEASE.md  SECURITY.md  SUPPORT.md  VALIDATION.md  index.html  package.json  project-brief.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  repository-cleanup.yml  validation-gap.yml
.github/workflows/: ci.yml
benchmark-artifacts/: README.md  latest.json
benchmark-artifacts/ci-blockers/: latest.json
benchmark-artifacts/ci-blockers/runs/: github-actions-green-pr23-609b48c-2026-05-29.json  github-actions-green-pr23-current-head-2026-05-29.json  github-actions-green-release-stack-2026-05-29.json  github-actions-manual-only-open-prs-2026-05-25.json  github-actions-open-pr-stack-2026-05-29.json  github-actions-post-merge-no-open-prs-2026-05-26.json  github-actions-runner-startup-block-2026-05-23-pr7.json
benchmark-artifacts/comparisons/openfhe/: latest.json
benchmark-artifacts/comparisons/openfhe-ckks/: latest.json
benchmark-artifacts/comparisons/tfhe-rs-realdata/: latest.json
benchmark-artifacts/native-evidence/runs/: native-evidence-2026-05-23.json  native-evidence-measurement-coverage-2026-05-26.json  native-evidence-measurement-gap-index-2026-05-27.json  native-evidence-openfhe-measured-2026-06-15.json  native-evidence-tfhe-alpha-lane-framing-2026-05-29.json  native-evidence-tfhe-rss-2026-05-28.json
benchmark-artifacts/plaintext-baselines/eeg-eye-state/: latest.json
benchmark-artifacts/plaintext-baselines/nmnist-smoke/: latest.json
benchmark-artifacts/reconstruction-risk/: latest.json
benchmark-artifacts/release-evidence/runs/: release-evidence-ci-head-0feaa65-2026-05-29.json  release-evidence-ci-head-609b48c-2026-05-29.json  release-evidence-current-ci-head-2026-05-29.json  release-evidence-index-2026-05-27.json  (+11 more)
benchmark-artifacts/runs/: benchmark-2026-05-21T10-19-04-750Z.json  benchmark-2026-05-29T13-45-00-000Z.json
docs/: README.md  architecture-decisions.md  briefing-sequence.md  claim-evidence-ledger.md  command-reference.md  contributor-workflow.md  data-handling.md  dependency-matrix.md  developer-quickstart.md  evidence-dashboard.md  evidence-guide.md  faq.md  glossary.md  layperson-quickstart.md  maintainer-checklist.md  operations-runbook.md  patent-package-map.md  policy-boundary.md  presentation-outputs.md  prototype-map.md  release-gate-matrix.md  repository-guide.md  reviewer-quickstart.md  status-roadmap.md  testing-strategy.md  troubleshooting.md  what-the-demo-shows.md
patent/: ENER_claim_seed_set.md  ENER_drawings_descriptions.md  ENER_fto_extraction_summary.md  ENER_prior_art_search_plan.md  ENER_provisional_cover_sheet.md  ENER_provisional_specification.docx  ENER_provisional_specification.md  ENER_submission_checklist.md
patent/ENER_figures/: fig3_adaptive_compression.mmd  fig4_reconstruction_resistance.mmd  fig6_sorted_event_bfvrns.mmd
patent/briefing/: ENER_attorney_ip_review.md  ENER_congressional_briefing_memo.md  ENER_executive_summary.md  ENER_investor_safe_brief.md  ENER_legal_review_flags.md  ENER_policy_whitepaper.md  ENER_publication_formatting.md  ENER_reference_sources.md  ENER_visual_recommendations.md  ENER_weak_claims_evidence_gaps.md  README.md
patent/figures/: fig1_pipeline.mmd  fig2_split_device.mmd  fig5_encrypted_classifier.mmd
prototype/: LINEAR_ALGEBRA_NEXT.md  OPENFHE_CKKS_INTEGRATION.md  OPENFHE_INTEGRATION.md  PLAINTEXT_BASELINE.md  README.md  TFHE_RS_INTEGRATION.md  benchmark.mjs  gateway-demo.mjs  native-evidence.mjs  openfhe-benchmark.mjs  openfhe-ckks-benchmark.mjs  openfhe-realdata-contract.mjs  openfhe_contract_loader.hpp  plaintext-baseline.mjs  privacy-mode-ablation.mjs  reconstruction-risk.mjs  release-evidence.mjs  research-assumptions.json  tfhe-rs-benchmark.mjs  toy-neurohe-demo.mjs
prototype/lib/: artifacts.mjs  benchmark.mjs  classifier.mjs  demo.mjs  docs-links.mjs  eeg-eye-state.mjs  events.mjs  evidence-dashboard.mjs  gateway.mjs  linear-algebra.mjs  math.mjs  native-evidence.mjs  nmnist.mjs  openfhe-adapter.mjs  openfhe-ckks-adapter.mjs  reconstruction-risk.mjs  release-evidence.mjs  repo-hygiene.mjs  spike-sorter.mjs  tfhe-rs-adapter.mjs  toy-paillier.mjs
prototype/openfhe/: CMakeLists.txt  openfhe_linear_demo.cpp
prototype/openfhe-ckks/: CMakeLists.txt  openfhe_ckks_linear_demo.cpp
prototype/scripts/: check-docs.mjs  placeholder-scan.mjs  render-evidence-dashboard.mjs
prototype/test/: prototype.test.mjs
prototype/tfhe-rs/: Cargo.toml
prototype/tfhe-rs/src/: lib.rs  main.rs
(+25 files in other folders)
